tests/typing/faulty_ops_b.sy
start :: fn do
    not true
    not 1
end
// error: $Mismatch
